app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require typography
 */

@import 'variables';

/* Selection */

::selection {
  background: $primary;
  color: #FFF;
  border-color: #FFF;
}

::-moz-selection {
  background: $primary;
  color: #FFF;
  border-color: #FFF;
}

/* Layout */

html { height: 100%; }

body {
  background-color: $background;
  margin: 0;
  font-family: "Open Sans", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 500;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #333;
  height: 100%;
  width: 100%;
  overflow-y: scroll;
}

body::before {
  content:"";
  height:100%;
  float:left;
  width:0;
  margin-top:-32767px;
}

nav, section, footer {
  max-width: 900px;
}

section {
  padding: 0;
  width: 100%;
  background: #FFF;
  border-left: 1px solid #DDD;
  border-right: 1px solid #DDD;
  max-width: 898px;
  margin: 0 auto;
  min-height: 100%;
  margin-top: -60px;
}

nav .inner, section .inner, footer{
  padding: 20px;
  margin: 0 auto;
}

header {
	border: 1px dashed #888;
	padding: 20px;
	margin-bottom: 20px;
	
	p {
  	font-size: 1.15em;
	}
}

header#about {
  border-style: none;
  padding: 0;
  margin-top: 20px;
  margin-bottom: 30px;
  text-align: center;
}

#call-to-action {
  width: 100%;
  text-align: center;
  height: 90px;
  
  button {
    font-size: 1.2em;
    padding-left: 12px;
    padding-right: 12px;
    padding-top: 8px;
    padding-bottom: 8px;
  }
  
  a::after {
    display: none;
  }
}

header#section {
  padding: 0;
  border: 0;
  margin: 0;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: 1px solid #DDD;
  border-top: 1px solid #DDD;
  margin-top: -1px;
  font-size: 1.15em;
  display: inline-block;
  width: 100%;
  
  a {
    font-weight: bold;
    display: inline-block;
  }
  
  span {
    padding-left: 20px;
  }
}

section .inner {
  overflow: auto;
	padding-top: 70px;
	padding-bottom: 50px;
}

footer {
  position: relative;
	margin-top: -51px;
	height: 49px;
	clear: both;
	padding: 0;
  color: #999;
  line-height: 50px;
  font-family: "ITC Franklin Condensed", sans-serif;
  font-size: 1.4em;
  border-top: 1px solid #DDD;
}

footer .inner {
	padding-left: 20px;
  padding-right: 20px;
}

/* nav */

nav {
  color: #FFF;
  height: 50px;
  line-height: 50px;
  position: relative;
  top: 0;
  margin: 0 auto;
  width: 100%;
  font-family: "ITC Franklin Condensed", sans-serif;
  overflow: hidden;
  padding-bottom: 10px;
  z-index: 1;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}

nav .inner {
  height: 50px;
  padding: 0;
  position: relative;
  background-color: $primary;
  -webkit-box-shadow: 0 1px 5px rgba(20,20,20,.2);
     -moz-box-shadow: 0 1px 5px rgba(20,20,20,.2);
          box-shadow: 0 1px 5px rgba(20,20,20,.2);
}

nav .inner .left {
  position: absolute;
  height: 50px;
  width: 159px;
  left: 0;
  top: 0;
  padding-left: 20px;
  border-left: 1px solid $secondary;
}

nav .inner h2 {
  margin: 0;
  font-size: 38px;
  height: 50px;
  font-weight: 400;
  line-height: 50px;
  padding-left: 30px;
  display: inline-block;
  top: 0;
  position: relative;
  background-image: url('/assets/logo_nav.png');
  -moz-background-size: auto 35px;
    -o-background-size: auto 35px;
       background-size: auto 35px;
  background-repeat: no-repeat;
  background-position-y: 8px;
  
}

nav .inner .left:hover h2 {
  opacity: .8;
}

nav .inner .left:active h2 {
  top: 1px;
}

nav .inner .right, nav .inner .left {
  font-size: 0;
  height: 50px;
}

nav .inner .right div {
  font-size: 24px;
  border-left: 1px solid $secondary;
  border-right: 1px solid $secondary;
  margin-right: -1px;
  padding-left: 20px;
  padding-right: 20px;
  display: inline-block;
}

nav .inner .right a:last-child div {
  margin-right: 0;
}

nav .inner .right a:hover div {
  background-color: #FFF;
  color: $primary;
  border-color: transparent;
}

nav .inner .right a:hover + a div {
  border-left-color: transparent;
}

nav .inner .right a:last-child:hover div, nav .inner .right a:last-child:active div {
  border-right-color: #DDD;
}

nav .inner .right a:active div {
  background-color: #FFF;
  color: #666;
  border-color: transparent;
}

nav .inner .right a:active + a div {
  border-left-color: transparent;
}

#star-space {
	display: none;
}

/* Footer */

footer {
	text-align: right;
}

/* Generic Elements */

select {
  font-size: 1em;
}

.noline::after {
  display: none;
}

.clearfix {
  clear: both;
}

.red {
  color: #df3a30 !important;
}

.green {
  color: #27ae60 !important;
}

.blue {
  color: #487EBD !important;
}

.yellow {
  color: #ecce39 !important;
}

hr {
  border: none;
  height: 1px;
  background: #CCC;
  margin-bottom: 30px;
  margin-top: 30px;
}

.left {
  float: left;
}

.right {
  float: right;
}

ul, ol {
  padding-left: 20px;
}

/* Copy Text */

h1 + p, p:first-child {
  margin-top: 0;
}

p:last-child, p.last {
  margin-bottom: 0;
}

/* Headers */

h1, h2, h3 {
  margin: 0;
  line-height: 1.1;
}

h1 {
  font-size: 3.25em;
  font-weight: 500;
  font-family: "ITC Franklin Condensed", sans-serif;
}

h1 + p, h1 + span, h1 + a, h1 + h2 {
  margin-top: 15px;
}

/* Anchors */

nav a:link, nav a, nav a div, nav a h2 {
  color: #FFF;
  text-decoration: none;
}

a:link, a {
  color: #666;
  text-decoration: none;
  position: relative;
  display: inline-block;
}
/* ... */

